# VideoAnalyticsCV

./: .gitignore  VideoAnalyticsCV_seminar2.ipynb  pyproject.toml
.ipynb_checkpoints/: Seminar_2-checkpoint.md  homework_1-checkpoint.ipynb
