[project]
name = "videoanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.0.1",
    "decord>=0.6.0",
    "matplotlib>=3.10.8",
    "notebook>=7.4.7",
    "numpy>=2.3.5",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
